--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     width: 300px;
 }
 
-.desctiption{
+.desctiption {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -18,6 +18,22 @@
     width: 70%;
 }
 
-.flag:active{
+.flag:active {
     transform: scale(0.7);
+}
+
+.collaborator-container {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    flex-direction: column;
+    color: white;
+    font-size: 1.1em;
+}
+
+.collaborator {
+    margin-left: 25px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
 }
