--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,13 @@
     border-style: none;
 }
 .collaborator-container {
+    display: flex;
+    flex-direction: column;
     text-align: center;
     color: white;
     font-size: 1.1em;
 }
 .collaborator {
-    margin-left: 25px;
     width: 60px;
     height: 60px;
     border-radius: 50%;
