--- a/src/pages/auth-page/Auth.css
+++ b/src/pages/auth-page/Auth.css
@@ -1,3 +1,13 @@
 .author__page__header {
   border-bottom: 2px solid #ccc;
 }
+
+.video_container {
+  display: flex;
+  flex-direction: column;
+}
+
+.preview {
+  width: 500px;
+  height: 300px;
+}
